# lookml-zenml

./: .flake8  LICENSE  README.md  poetry.toml  pyproject.toml  pytest.ini
lookml_zenml/: __init__.py  cli.py  lookml_models.py  lookml_project.py  model.py  view.py
tests/: README.md  conftest.py  test_cli.py  test_dashboards.py  test_fields.py  test_lookml_project.py  test_models.py  test_topics.py  test_views.py
tests/config/test_all_fields/: zenml_model_with_all_fields.yml
tests/config/test_all_fields/dashboards/: funnel_dashboard.dashboard.lkml
tests/config/test_all_fields/views/: zenml_view_with_all_fields.yml
tests/config/test_data_model/: testing_model.model.lookml  zendesk.explore.lookml
tests/config/test_data_model/dashboards/: conversion_dashboard.dashboard.lkml  funnel_dashboard.dashboard.lkml  kpi_dashboard.dashboard.lkml
tests/config/test_data_model/views/: all_visitors.view.lkml  churn.view.lkml  churn_refined.view.lkml  last_touch_attribution.view.lkml  marketing_spend_daily.view.lkml  orders_view.view.lkml  session_to_profile.view.lookml  support_interactions.view.lkml  support_interactions_ext.view.lkml  user_facts_view.view.lkml  users.view.lkml  zendesk_tickets.view.lkml  zendesk_users.view.lkml
