[tool.poetry]
name = "lookml-zenml"
version = "0.1.2"
description = ""
authors = ["Paul Blankley <paul@zenlytic.com>"]
readme = "README.md"
packages = [{include = "lookml_zenml"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"
lkml = "^1.3.1"
"ruamel.yaml" = "^0.17.32"
PyYAML = "^6.0"
click = "^8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lookml_zenml = 'lookml_zenml:cli_group'
